list of classic lasagna ingredients

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Lasagna</h1>
-<p> <img src="./lasagnaimg/lasagna.jpg"></p>
+<p> <img src="./lasagnaimg/lasagna.jpg" style="width:50% ; height :auto;"></p>
 <h2><strong>Classic Lasagna Recipe</strong></h2>
 <p>Lasagna is a traditional Italian dish made with layers of pasta, 
 rich meat sauce, creamy béchamel, and melted cheese. This hearty dish is perfect for family dinners,
@@ -16,7 +16,21 @@ rich meat sauce, creamy béchamel, and melted cheese. This hearty dish is perfec
     <p>Our version of lasagna features ground beef and Italian sausage 
         in a savory tomato-based sauce, layered with tender lasagna noodles, ricotta cheese, 
         and plenty of mozzarella. It’s baked to perfection until the top is golden brown and bubbling.
-         Serve it with a side of garlic bread and a fresh salad for a complete meal!</p>
+         Serve it with a side of garlic bread and a fresh salad for a complete meal.</p>
+         <h3>
+           <i>Ingredients for classic lasagna</i></h3>
+           <ul>
+            <li> Pound (450g) ground beef</li>
+            <li>small onion</li>
+            <li> can crushed tomato</li>
+            <li>cloves garlic</li>
+            <li> table spoon of sugar; salt and paper to taste</li>
+            <li> tomato sauce</li>
+            <li> tomato paste </li>
+            <li>Dried or fresh basil</li>
+           </ul>
+
+           
 
 
 
