add detailed step for making lasagna

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -29,6 +29,19 @@ rich meat sauce, creamy béchamel, and melted cheese. This hearty dish is perfec
             <li> tomato paste </li>
             <li>Dried or fresh basil</li>
            </ul>
+           <h3><i>Steps/Procedure</i></h3>
+           <ol>
+            <li> Preheat your oven</li>
+            <li>Cook your meat sauce</li>
+            <li>In a bowl, mix ricotta, 2 cups mozzarella, 1/2 cup Parmesan, egg,
+                 parsley, salt, and pepper.</li>
+                 <li> Boil lasagna noodles until al dente, drain and set aside</li>
+                 <li>In a baking dish layer this in order:noodles, ricotta mixture,
+                     meat sauce and mozzarella. Repeat layer with a final layer of chease and sauce </li>
+                     <li> Cover with foil and bake (25 minutes). Uncover and bake again
+                         until bubble and golden,</li>
+                     <li>Let it sit before serving</li>
+           </ol>
 
            
 
