added jolllof rice recipe with ingredients and steps

--- a/Recipes/jollof.html
+++ b/Recipes/jollof.html
@@ -6,6 +6,36 @@
     <title>Jollof</title>
 </head>
 <body>
-    
+  <h1>Classic Jollof Recipe</h1>  
+  <p> <img src="images/Naijajollof.jpg" style="width: 50%; height: auto;"alt="jollof image"></p>
+  <h2>Jollof Rice Recipe</h2>
+<p>Jollof rice is a popular West African dish made with rice cooked in a spiced tomato sauce. 
+    It features a blend of flavors from ingredients like garlic, onions, and peppers, 
+    often served with meat or vegetables. 
+    Known for its vibrant red color and rich taste, it's a staple at many celebrations.</p>
+    <h3><i>Ingredients for Jollof Rice</i></h3>
+    <ul>
+        <li>rice</li>
+        <li>Fresh Tomatoes </li>
+        <li>onions</li>
+        <li>Fresh pepper</li>
+        <li>Tin tomatoes</li>
+        <li>Ginger</li>
+        <li>garlic</li>
+        <li>Spices</li>
+        <li>Meat/ Fish</li>
+    </ul>
+    <h3><i>Steps/Procedure</i></h3>
+    <ol>
+        <li>Chop onions, blend fresh tomatoes and pepper,mince ginger and garlic</li>
+        <li>Have your desired meat or Fish choice cooked and ready</li>
+        <li>Sauté onions, garlic, and ginger in oil until soft.</li>
+        <li> Add your blended tomatoes and pepper; and stir until thickened</li>
+        <li> Add spices, salt, pepper and mix well
+        </li>
+        <li>Stir in your per-boiled rice and cook  for a few minutes</li>
+        <li>Add your vegetables and cook for some minutes </li>
+        <li>fluff your rice and serve hot</li>
+    </ol>
 </body>
 </html>
