--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 </head>
 <body>
    <h1>Odin Recipes</h1> 
-   <a href="./lasagna.html"> Lasagna</a>
+   <ul>
+    <li><a href="./lasagna.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
+    <li><a href=".jollof.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
+    <li><a href="./abacha.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
+</ul>
 </body>
 </html>
