fixed my link errors corrected my recipes pages errors to fix loading error in index.html

--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 <body>
    <h1>Odin Recipes</h1> 
    <ul>
-    <li><a href="./lasagna.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
-    <li><a href=".jollof.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
-    <li><a href="./abacha.html" target="_blank" rel="noopener noreferrer> Lasagna"></a></li>
+    <li><a href="Recipes/lasagna.html" target="_blank" rel="noopener noreferrer> Lasagna">Lasagna</a></li>
+    <li><a href="Recipes/jollof.html" target="_blank" rel="noopener noreferrer> Lasagna">Jollof</a></li>
+    <li><a href="Recipes/abacha.html" target="_blank" rel="noopener noreferrer> Lasagna">Abacha</a></li>
 </ul>
 </body>
 </html>
