fixed my lasagna image name

--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h1>Lasagna</h1>
-<p> <img src="./lasagnaimg/lasagna.jpg" style="width:50% ; height :auto;"></p>
+<p> <img src="images/lasagna.jpg" style="width:50% ; height :auto;"></p>
 <h2><strong>Classic Lasagna Recipe</strong></h2>
 <p>Lasagna is a traditional Italian dish made with layers of pasta, 
 rich meat sauce, creamy béchamel, and melted cheese. This hearty dish is perfect for family dinners,
