sttyled index.html added style for enhanced look on index page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>Odin Recipes</h1> 
+   <h1 class="highlight-text">Odin Recipes</h1> 
    <ul>
-    <li><a href="Recipes/lasagna.html" target="_blank" rel="noopener noreferrer> Lasagna">Lasagna</a></li>
-    <li><a href="Recipes/jollof.html" target="_blank" rel="noopener noreferrer> Lasagna">Jollof</a></li>
-    <li><a href="Recipes/abacha.html" target="_blank" rel="noopener noreferrer> Lasagna">Abacha</a></li>
+    <li class="main-header"><a href="Recipes/lasagna.html" target="_blank" rel="noopener noreferrer> Lasagna">Lasagna</a></li>
+    <li class="main-header"><a href="Recipes/jollof.html" target="_blank" rel="noopener noreferrer> Lasagna">Jollof</a></li>
+    <li class="main-header"><a href="Recipes/abacha.html" target="_blank" rel="noopener noreferrer> Lasagna">Abacha</a></li>
 </ul>
 </body>
 </html>
