updated css changes

--- a/Recipes/abacha.html
+++ b/Recipes/abacha.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Abacha</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Delicious Abacha</h1>  
+  <h1 class="highlight-text">Delicious Abacha</h1>  
   <p><img src="images/abacha.jpg"alt="Abacha dish" style="width:50%; height: auto";></p>
   <h2> Delicious Abacha Recipe</h2>
   <p>Abacha, also known as African salad or Abacha in the Igbo language, 
