--- a/Recipes/jollof.html
+++ b/Recipes/jollof.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jollof</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-  <h1>Classic Jollof Recipe</h1>  
+  <h1 class="highlight-text">Classic Jollof Recipe</h1>  
   <p> <img src="images/Naijajollof.jpg" style="width: 50%; height: auto;"alt="jollof image"></p>
   <h2>Jollof Rice Recipe</h2>
 <p>Jollof rice is a popular West African dish made with rice cooked in a spiced tomato sauce. 
