--- a/Recipes/lasagna.html
+++ b/Recipes/lasagna.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
-<h1>Lasagna</h1>
-<p> <img src="images/lasagna.jpg" style="width:50% ; height :auto;"></p>
+<h1 class="highlight-text">Lasagna</h1>
+<p> <img src="./images/lasagna.jpg" style="width:50% ; height :auto;"></p>
 <h2><strong>Classic Lasagna Recipe</strong></h2>
 <p>Lasagna is a traditional Italian dish made with layers of pasta, 
 rich meat sauce, creamy béchamel, and melted cheese. This hearty dish is perfect for family dinners,
